replaced the localhost address to hosted webservice in server

--- a/server/config.env
+++ b/server/config.env
@@ -1,2 +1,2 @@
 ATLAS_URI="mongodb+srv://Apar_Shrestha:iambatman@nodeexpressprojects.lkegi.mongodb.net/?retryWrites=true&w=majority&appName=NodeExpressProjects"
-PORT=5050
+PORT= "https://mern-1-hhq6.onrender.com"
